fix ts errors and update pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-navigation-bar></app-navigation-bar>
-<router-outlet></router-outlet>
+<main>
+  <!--Main layout-->
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</main>
 <app-footer></app-footer>
