--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,10 @@
-<p>
-  footer works!
-</p>
+<footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom indigo">
+  <!--Copyright-->
+  <div class="footer-copyright">
+    <div class="container-fluid">
+      © 2017 Copyright:
+      <a href="https://eventpicking.de"> eventpicking.de </a>
+    </div>
+  </div>
+  <!--/.Copyright-->
+</footer>
