--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
 <app-navigation-bar></app-navigation-bar>
+
+
 <main>
-  <!--Main layout-->
-  <div class="container">
-    <router-outlet></router-outlet>
+  <div class="container" style="height:1300px;">
+    <div class="row mt-5 pt-5">
+      <div class="col text-center">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
   </div>
 </main>
+
+<!--Main Layout-->
 <app-footer></app-footer>
