--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,6 @@
 <header>
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo sticky-top">
+  <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark indigo">
 
     <!-- Navbar brand -->
     <logo>
@@ -20,6 +20,26 @@
         </li>
 
       </ul>
+
+      <ul class="nav navbar-nav nav-flex-icons ml-auto">
+        <li class="nav-item" *ngIf="!fbUser">
+          <a class="nav-link waves-effect waves-light" (click)="login()">
+            <i class="fa fa-sign-in mr-1"></i>
+            <span class="clearfix d-none d-sm-inline-block">Anmelden</span>
+          </a>
+        </li>
+
+        <li class="nav-item dropdown" dropdown *ngIf="fbUser">
+          <a dropdownToggle class="nav-link dropdown-toggle waves-effect waves-light">
+            <i class="fa fa-user"></i> Profil
+          </a>
+          <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown-cyan" role="menu">
+            <a class="dropdown-item waves-effect waves-light" mdbRippleRaius routerLink="/profile">Mein Konto</a>
+            <a class="dropdown-item waves-effect waves-light" mdbRippleRadius (click)="logout()">Abmelden</a>
+          </div>
+        </li>
+      </ul>
+
     </links>
     <!-- Collapsible content -->
 
