add google, facebook and twitter oAuth providers to the auth service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 
 <main>
-  <div class="container" style="height:1300px;">
+  <div class="container">
     <div class="row mt-5 pt-5">
       <div class="col text-center">
         <router-outlet></router-outlet>
