--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,60 @@
-<h1>Homepage</h1>
+<div class="row mt-5 pt-5">
+  <!--Section: Features v.2-->
+  <section class="section feature-box">
+
+    <!--Section heading-->
+    <h1 class="section-heading pt-4">Why is it so great?</h1>
+    <!--Section description-->
+    <p class="section-description lead grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi,
+      veritatis totam voluptas nostrum quisquam eum.</p>
+
+    <!--Grid row-->
+    <div class="row features-small">
+
+      <!--Grid column-->
+      <div class="col-md-4 mb-r">
+        <div class="col-1 col-md-2 float-left">
+          <i class="fa fa-bullhorn blue-text"></i>
+        </div>
+        <div class="col-10 col-md-9 col-lg-10 float-right">
+          <h4 class="feature-title">Marketing</h4>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda.</p>
+          <a class="btn btn-primary btn-sm ml-0">Learn more</a>
+        </div>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-md-4 mb-r">
+        <div class="col-1 col-md-2 float-left">
+          <i class="fa fa-cogs pink-text"></i>
+        </div>
+        <div class="col-10 col-md-9 col-lg-10 float-right">
+          <h4 class="feature-title">Customization</h4>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda.</p>
+          <a class="btn btn-pink btn-sm ml-0">Learn more</a>
+        </div>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-md-4 mb-r">
+        <div class="col-1 col-md-2 float-left">
+          <i class="fa fa-dashboard purple-text"></i>
+        </div>
+        <div class="col-10 col-md-9 col-lg-10 float-right">
+          <h4 class="feature-title">Support</h4>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda.</p>
+          <a class="btn btn-secondary btn-sm ml-0">Learn more</a>
+        </div>
+      </div>
+      <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+  </section>
+  <!--Section: Features v.2-->
+
+
+</div>
