--- a/src/app/pages/photo-detail-page/photo-detail-page.component.html
+++ b/src/app/pages/photo-detail-page/photo-detail-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  photo-detail-page works!
-</p>
+<div class="row mt-5 pt-5">
+    <div class="col text-center">
+      <h1>Photo Detail Page</h1>
+    </div>
+  </div>
