--- a/src/app/pages/prices-page/prices-page.component.html
+++ b/src/app/pages/prices-page/prices-page.component.html
@@ -1,5 +1,164 @@
 <div class="row mt-5 pt-5">
+  <div class="col text-center">
+    <!--Section: Pricing v.1-->
+    <section class="section pb-3">
+      <!--Section heading-->
+      <h1 class="section-heading h1 pt-4">Our pricing plans</h1>
+      <!--Section description-->
+      <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi,
+        veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
 
-  <h1>Preise</h1>
+      <!--First row-->
+      <div class="row">
 
+        <!--First column-->
+        <div class="col-lg-4 col-md-12 mb-r">
+
+          <!--Pricing card-->
+          <div class="card pricing-card">
+            <!--Price-->
+            <div class="price header blue">
+              <h1>10</h1>
+              <div class="version">
+                <h5>Basic</h5>
+              </div>
+            </div>
+            <!--/.Price-->
+
+            <!--Features-->
+            <div class="card-body striped">
+              <ul>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 20 GB Of Storage</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 2 Email Accounts</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-times"></i> 24h Tech Support</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-times"></i> 300 GB Bandwidth</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-times"></i> User Management </p>
+                </li>
+              </ul>
+
+              <button class="btn btn-blue waves-light" mdbRippleRadius>Buy now</button>
+            </div>
+            <!--/.Features-->
+
+          </div>
+          <!--/.Pricing card-->
+
+        </div>
+        <!--/First column-->
+
+        <!--Second column-->
+        <div class="col-lg-4 col-md-6 mb-r">
+
+          <!--Pricing card-->
+          <div class="card pricing-card">
+            <!--Price-->
+            <div class="price header indigo">
+              <h1>20</h1>
+              <div class="version">
+                <h5>Pro</h5>
+              </div>
+            </div>
+            <!--/.Price-->
+
+            <!--Features-->
+            <div class="card-body striped">
+              <ul>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 20 GB Of Storage</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 4 Email Accounts</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 24h Tech Support</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-times"></i> 300 GB Bandwidth</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-times"></i> User Management </p>
+                </li>
+              </ul>
+
+              <button class="btn btn-indigo waves-light" mdbRippleRadius>Buy now</button>
+            </div>
+            <!--/.Features-->
+
+          </div>
+          <!--/.Pricing card-->
+
+        </div>
+        <!--/Second column-->
+
+        <!--Third column-->
+        <div class="col-lg-4 col-md-6 mb-r">
+          <!--Pricing card-->
+          <div class="card pricing-card">
+            <!--Price-->
+            <div class="price header deep-purple">
+              <h1>30</h1>
+              <div class="version">
+                <h5>Enterprise</h5>
+              </div>
+            </div>
+            <!--/.Price-->
+
+            <!--Features-->
+            <div class="card-body striped">
+              <ul>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 30 GB Of Storage</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 5 Email Accounts</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 24h Tech Support</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> 300 GB Bandwidth</p>
+                </li>
+                <li>
+                  <p>
+                    <i class="fa fa-check"></i> User Management </p>
+                </li>
+              </ul>
+
+              <button class="btn btn-deep-purple waves-light" mdbRippleRadius>Buy now</button>
+            </div>
+            <!--/.Features-->
+
+          </div>
+          <!--/.Pricing card-->
+        </div>
+        <!--/Third column-->
+
+      </div>
+      <!--/First row-->
+    </section>
+    <!--Section: Pricing v.1-->
+  </div>
 </div>
