--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -1,1 +1,5 @@
-<h1>Registerpage</h1>
+<div class="row mt-5 pt-5">
+    <div class="col text-center">
+      <h1>Signup Page</h1>
+    </div>
+  </div>
