--- a/src/app/pages/checkout-page/checkout-page.component.html
+++ b/src/app/pages/checkout-page/checkout-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  checkout-page works!
-</p>
+<div class="row mt-5 pt-5">
+    <div class="col text-center">
+      <h1>Checkout Page</h1>
+    </div>
+  </div>
