--- a/src/app/pages/event-page/event-page.component.html
+++ b/src/app/pages/event-page/event-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  event-page works!
-</p>
+<div class="row mt-5 pt-5">
+    <div class="col text-center">
+      <h1>Event Page</h1>
+    </div>
+  </div>
