--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,3 +1,5 @@
-<p>
-  page-not-found works!
-</p>
+<div class="row mt-5 pt-5">
+    <div class="col text-center">
+      <h1>Page not Found Page</h1>
+    </div>
+  </div>
