--- a/src/app/pages/photographer-page/photographer-page.component.html
+++ b/src/app/pages/photographer-page/photographer-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  photographer-page works!
-</p>
+<div class="row mt-5 pt-5">
+    <div class="col text-center">
+      <h1>Photographer Page</h1>
+    </div>
+  </div>
