--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,3 +1,5 @@
 <div class="row mt-5 pt-5">
-  <h1>Profile Page</h1>
-</div>
+    <div class="col text-center">
+      <h1>Profile Page</h1>
+    </div>
+  </div>
