fix e2e test and input fileds

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -14,12 +14,12 @@
 
         <!--Body-->
         <div class="md-form">
-          <input type="text" class="form-control" [(ngModel)]="email" id="input_email">
+          <input mdbActive type="text" class="form-control" [(ngModel)]="email" id="input_email">
           <label for="Form-email1" class="">Ihre E-Mail</label>
         </div>
 
         <div class="md-form pb-3">
-          <input type="password" class="form-control" [(ngModel)]="password" id="input_password">
+          <input mdbActive type="password" class="form-control" [(ngModel)]="password" id="input_password">
           <label for="Form-pass1" class="">Ihr Passwort</label>
           <p class="font-small blue-text d-flex justify-content-end" data-toggle="modal" data-target="#basicExample" (click)="demoBasic.show()" id="p_open_reset_modal">Passwort
             <a class="blue-text ml-1"> vergessen?</a>
