--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -21,13 +21,13 @@
         <div class="md-form pb-3">
           <input mdbActive type="password" class="form-control" [(ngModel)]="password" id="input_password">
           <label for="Form-pass1" class="">Ihr Passwort</label>
-          <p class="font-small blue-text d-flex justify-content-end" data-toggle="modal" data-target="#basicExample" (click)="demoBasic.show()" id="p_open_reset_modal">Passwort
-            <a class="blue-text ml-1"> vergessen?</a>
+          <p class="font-small blue-text d-flex justify-content-end" data-toggle="modal" data-target="#basicExample" (click)="demoBasic.show()" id="p_open_reset_modal">
+            <a class="blue-text ml-1">Passwort vergessen?</a>
           </p>
         </div>
 
         <div class="text-center mb-3">
-          <button type="button" class="btn btn-indigo btn-lg btn-block" (click)="loginWithCredentials()" id="button_login">Anmelden</button>
+          <button type="button" class="btn near-moon-gradient btn-lg btn-block" (click)="loginWithCredentials()" id="button_login">Anmelden</button>
         </div>
         <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> oder Anmelden mit:</p>
 
