--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
-<footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom near-moon-gradient">
+<footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom aqua-gradient">
   <!--Copyright-->
   <div class="footer-copyright">
     <div class="container-fluid">
       © 2017 Copyright:
-      <a href="https://eventpicking.de"> eventpicking.de </a>
+      <a routerLink="/"> eventpicking.de </a>
     </div>
   </div>
   <!--/.Copyright-->
