--- a/src/app/pages/prices-page/prices-page.component.html
+++ b/src/app/pages/prices-page/prices-page.component.html
@@ -4,7 +4,7 @@
 <section class="section pb-3">
   
       <!--Section heading-->
-      <h1 class="section-heading h1 pt-4">Our pricing plans</h1>
+      <h1 class="section-heading pt-4">Our pricing plans</h1>
       <!--Section description-->
       <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
   
