--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="text-center mb-3">
-        <button type="button" class="btn near-moon-gradient btn-lg btn-block" (click)="signupWithCredentials()" id="button_login">Registrieren</button>
+        <button type="button" class="btn aqua-gradient btn-lg btn-block" (click)="signupWithCredentials()" id="button_login">Registrieren</button>
       </div>
       <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> oder Registrieren mit:</p>
 
@@ -98,7 +98,7 @@
       </div>
 
       <div class="text-center mb-3">
-        <button type="button" class="btn near-moon-gradient btn-lg btn-block" (click)="signupWithCredentials()" id="button_login">Registrieren</button>
+        <button type="button" class="btn aqua-gradient btn-lg btn-block" (click)="signupWithCredentials()" id="button_login">Registrieren</button>
       </div>
       <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> oder Registrieren mit:</p>
 
