--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -18,7 +18,10 @@
           <a class="nav-link waves-light" mdbRippleRadius routerLink="/home">Home </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link waves-light" mdbRippleRadius routerLink="/prices">Preise</a>
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/features">Features </a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link waves-light" mdbRippleRadius routerLink="/prices">Preise </a>
         </li>
 
       </ul>
