--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -92,7 +92,8 @@
       <div class="md-form">
         <input mdbActive type="password" class="form-control" [(ngModel)]="password_repeated" id="input_password">
         <label>Passwort wiederholen</label>
-        <p class="font-small blue-text d-flex justify-content-end" data-toggle="modal" data-target="#basicExample" id="p_open_reset_modal" (click)="switchForms()">
+        <p class="font-small blue-text d-flex justify-content-end" data-toggle="modal" data-target="#basicExample" id="p_open_reset_modal"
+          (click)="switchForms()">
           <a class="blue-text ml-1">Als Benutzer registrieren</a>
         </p>
       </div>
@@ -100,25 +101,6 @@
       <div class="text-center mb-3">
         <button type="button" class="btn aqua-gradient btn-lg btn-block" (click)="signupWithCredentials()" id="button_login">Registrieren</button>
       </div>
-      <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> oder Registrieren mit:</p>
-
-      <div class="row my-3 d-flex justify-content-center">
-        <!--Facebook-->
-        <button type="button" class="btn btn-white btn-rounded mr-md-3 z-depth-1a waves-effect waves-light" (click)="loginWithFacebook()"
-          id="button_login_with_facebook">
-          <i class="fa fa-facebook blue-text text-center"></i>
-        </button>
-        <!--Twitter-->
-        <button type="button" class="btn btn-white btn-rounded mr-md-3 z-depth-1a waves-effect waves-light" (click)="loginWithTwitter()"
-          id="button_login_with_twitter">
-          <i class="fa fa-twitter blue-text"></i>
-        </button>
-        <!--Google +-->
-        <button type="button" class="btn btn-white btn-rounded z-depth-1a waves-effect waves-light" (click)="loginWithGoogle()" id="button_login_with_google">
-          <i class="fa fa-google-plus blue-text"></i>
-        </button>
-      </div>
-
     </div>
 
   </div>
