--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,9 @@ body,
 .view {
   height: 100%;
 }
+
+// iPhone X notch support
+.inner-wrap {
+  padding:2.5em 1.5em 2.5em 1.5em;
+  padding:2.5em constant(safe-area-inset-right) 2.5em constant(safe-area-inset-left);
+}
