--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -96,6 +96,7 @@
           (click)="switchForms()">
           <a class="blue-text ml-1">Als Benutzer registrieren</a>
         </p>
+        <p1 class="text-danger" *ngIf="error">{{error.code | firebaseError }}</p1>
       </div>
 
       <div class="text-center mb-3">
