--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -24,8 +24,7 @@
             <i class="fa fa-lock prefix"></i>
             <input mdbActive type="password" class="form-control" [(ngModel)]="password" name="password" id="input_password">
             <label for="password" class="">Ihr Passwort</label>
-            <p class="font-small blue-text d-flex justify-content-end" data-toggle="modal" data-target="#basicExample" (click)="demoBasic.show()"
-              id="p_open_reset_modal">
+            <p class="font-small blue-text d-flex justify-content-end" (click)="resetPasswordModal.show()" id="p_open_reset_modal">
               <a class="blue-text ml-1">Passwort vergessen?</a>
             </p>
             <p1 class="text-danger" *ngIf="error">{{error.code | firebaseError }}</p1>
@@ -70,14 +69,17 @@
 </div>
 
 
-<!-- Reset password modal -->
-<div mdbModal #demoBasic="mdb-modal" class="modal fade" id="basicExample" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+
+<!--Modal: Contact form-->
+<div mdbModal #resetPasswordModal="mdb-modal" class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
+  <div class="modal-dialog cascading-modal" role="document">
+    <!--Content-->
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title w-100" id="myModalLabel">Passwort zurücksetzen</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="demoBasic.hide()">
+      <!--Header-->
+      <div class="modal-header aqua-gradient darken-3 white-text">
+        <h4 class="title">Passwort zurücksetzen</h4>
+        <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close" (click)="resetPasswordModal.hide()">
           <span aria-hidden="true">×</span>
         </button>
       </div>
@@ -90,9 +92,12 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger btn-sm waves-light" data-dismiss="modal" (click)="demoBasic.hide()" mdbRippleRadius>Abbrechen</button>
-        <button type="button" class="btn btn-primary btn-sm waves-light" mdbRippleRadius (click)="demoBasic.hide(); resetPassword()">Passwort zurücksetzen</button>
+        <button type="button" class="btn btn-danger btn-sm waves-light" data-dismiss="modal" (click)="resetPasswordModal.hide()"
+          mdbRippleRadius>Abbrechen</button>
+        <button type="button" class="btn btn-primary btn-sm waves-light" mdbRippleRadius (click)="resetPasswordModal.hide(); resetPassword()">Passwort zurücksetzen</button>
       </div>
     </div>
+    <!--/.Content-->
   </div>
 </div>
+<!--Modal: Contact form-->
