--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -10,7 +10,7 @@
 
 <ng-template #userTmpl>
   <!-- Nav tabs -->
-  <mdb-tabset #staticTabs [buttonClass]="'nav-tabs tabs-3 aqua-gradient'" [contentClass]="''">
+  <mdb-tabset #staticTabs [buttonClass]="'nav-tabs tabs-3 aqua-gradient'" [contentClass]="'card'">
     <!--Events -->
     <mdb-tab heading="Käufe">
       <div class="row">
@@ -32,12 +32,12 @@
 
 <ng-template #photographerTmpl>
   <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-lg aqua-gradient waves-light" mdbRippleRadius>
+    <a class="btn-floating btn-lg aqua-gradient waves-light" mdbRippleRadius (click)="createEventModal.show()">
       <i class="fa fa-plus"></i>
     </a>
   </div>
   <!-- Nav tabs -->
-  <mdb-tabset #staticTabs [buttonClass]="'nav-tabs tabs-3 aqua-gradient'" [contentClass]="''">
+  <mdb-tabset #staticTabs [buttonClass]="'nav-tabs tabs-3 aqua-gradient'" [contentClass]="'card'">
     <!--Events -->
     <mdb-tab heading="Events">
       <div class="row">
@@ -117,3 +117,53 @@
 <ng-template #adminTmpl>
   <h1>Admin</h1>
 </ng-template>
+
+
+<div mdbModal #createEventModal="mdb-modal" class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog cascading-modal" role="document">
+    <!--Content-->
+    <div class="modal-content">
+
+      <!--Header-->
+      <div class="modal-header aqua-gradient darken-3 white-text">
+        <h4 class="title">
+          <i class="fa fa-calendar"></i> Event erstellen</h4>
+        <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close" (click)="createEventModal.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body mb-0">
+        <div class="md-form form-sm">
+          <i class="fa fa-calendar prefix"></i>
+          <input mdbActive type="text" class="form-control" name="event_name" [(ngModel)]="newEvent.name">
+          <label for="form19">Event Name</label>
+        </div>
+
+        <div class="md-form form-sm">
+          <i class="fa fa-map-marker prefix"></i>
+          <input mdbActive type="text" class="form-control" name="event_location" [(ngModel)]="newEvent.location">
+          <label for="form19">Event Location</label>
+        </div>
+
+
+        <div class="md-form form-sm">
+          <i class="fa fa-calendar prefix"></i>
+          <input mdbActive type="text" class="form-control" name="event_date" [(ngModel)]="newEvent.date">
+          <label for="form19">Datum</label>
+        </div>
+
+
+        <div class="text-center mt-1-half">
+          <button class="btn aqua-gradient mb-2 waves-light" mdbRippleRadius (click)="createNewEvent(); createEventModal.hide()">Event anlegen
+            <i class="fa fa-plus ml-1"></i>
+          </button>
+        </div>
+
+      </div>
+    </div>
+    <!--/.Content-->
+  </div>
+</div>
+<!--Modal: Contact form-->
