--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -43,21 +43,20 @@
       <div class="row">
         <div class="col-12">
           <br>
-          <h3 *ngIf="events.length === 0">Noch keine Events angelegt</h3>
 
           <!--Card Light-->
           <div class="card-columns">
             <!-- Card -->
-            <div *ngFor="let event of events" class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
+            <div *ngFor="let event of events | async; let i = index" class="card card-cascade">
 
               <!-- Content -->
-              <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+              <div class="text-white text-center d-flex align-items-center peach-gradient py-5 px-4">
                 <div>
-                  <h5 class="pink-text">
-                    <i class="fa fa-calendar"></i> 26.07.2017</h5>
-                  <p>Hochzeit: Mark und Linda
+                  <h5>
+                    <i class="fa fa-calendar"></i> {{ event.date }}</h5>
+                  <p>{{ event.name }}
                   </p>
-                  <a class="btn btn-pink waves-light">
+                  <a class="btn btn-primary waves-light" (click)="editEvent(event)">
                     <i class="fa fa-clone left"></i>bearbeiten</a>
                 </div>
               </div>
@@ -141,7 +140,7 @@
 </ng-template>
 
 
-<div mdbModal #createEventModal="mdb-modal" class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div mdbModal #createEventModal="mdb-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog cascading-modal" role="document">
     <!--Content-->
@@ -176,6 +175,18 @@
           <label for="form19">Datum</label>
         </div>
 
+        <div class="form-group">
+          <label for="form19">Veröffentlichen</label>
+          <div class="switch">
+            <label>
+              Nein
+              <input type="checkbox" [(ngModel)]="newEvent.public">
+              <span class="lever"></span>
+              Ja
+            </label>
+          </div>
+        </div>
+
 
         <div class="text-center mt-1-half">
           <button class="btn aqua-gradient mb-2 waves-light" mdbRippleRadius (click)="createNewEvent(); createEventModal.hide()">Event anlegen
@@ -188,4 +199,50 @@
     <!--/.Content-->
   </div>
 </div>
-<!--Modal: Contact form-->
+
+<div mdbModal #editEventModal="mdb-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog cascading-modal" role="document">
+    <!--Content-->
+    <div class="modal-content" *ngIf="eventEdit">
+
+      <!--Header-->
+      <div class="modal-header aqua-gradient darken-3 white-text">
+        <h4 class="title">
+          <i class="fa fa-calendar"></i> Event bearbeiten</h4>
+        <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close" (click)="editEventModal.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body mb-0">
+        <div class="md-form form-sm">
+          <i class="fa fa-calendar prefix"></i>
+          <input mdbActive type="text" class="form-control" name="event_name" [(ngModel)]="eventEdit.name">
+          <label for="form19">Event Name</label>
+        </div>
+
+        <div class="md-form form-sm">
+          <i class="fa fa-map-marker prefix"></i>
+          <input mdbActive type="text" class="form-control" name="event_location" [(ngModel)]="eventEdit.location">
+          <label for="form19">Event Location</label>
+        </div>
+
+
+        <div class="md-form form-sm">
+          <i class="fa fa-calendar prefix"></i>
+          <input mdbActive type="text" class="form-control" name="event_date" [(ngModel)]="eventEdit.date">
+          <label for="form19">Datum</label>
+        </div>
+
+
+        <div class="text-center mt-1-half">
+          <button class="btn aqua-gradient mb-2 waves-light" mdbRippleRadius (click)="updateEvent()">Event aktualisieren
+            <i class="fa fa-plus ml-1"></i>
+          </button>
+        </div>
+
+      </div>
+    </div>
+    <!--/.Content-->
+  </div>
+</div>
